Fixed alignment to justified

--- a/src/app/components/about-me/about-me.component.css
+++ b/src/app/components/about-me/about-me.component.css
@@ -12,3 +12,7 @@ h1 {
   width: 370px;
   height: 370px;
 }
+
+.container-2 {
+  text-align: justify;
+}
